            JIT: cope with returning nested arrays/objects/etc by checking if upper registers are in use or not
            JIT: Add peephole optimisations for push/pop (#2691)
            JIT: Remove 'jit' object from RAM (store in stack only when needed) - fix #2664
            Bangle.js2: Ensure Factory Reset deletes stored pairing data

     2v28 : Add `E.internal` as a way to access the 'hidden root' containing Espruino internal variables that previously needed `global["\xff"]`
            Bangle.js: Fix back handler not removed when using E.setUI with a back button but without widgets (#2636)
            nRF52: Add 'slaveLatency' option to BluetoothRemoteGATTServer.connect, default changed from 2 to 4
            nRF52: Add 'phy' and 'mtu' events to NRF/BluetoothDevice when these change on a connection
            MDBT42Q: Remove SHA512 from the build (needs 2.5k flash, rarely used)
            Bangle.js2: Adjust accelerometer axes for HRM algorithm to more closely match the datasheet
            nRF52: Add NRF/BluetoothRemoteGATTServer.updateConnection for setting the phy
            Bangle.js2: Add Bangle.setOptions({hrmStaticSampleTime})
            Bangle.js2: Fix issue using touch handler with Bangle.setUI({mode:"updown",...}) (fix #2648)
            Bangle.js2: Menus now buzz when back button pressed or icon tapped (fix #2642)
            JIT: When referencing a built-in member function of a built-in (Math.*, E.*, PIN_NAME.*, etc) include address rather than looking up (#2398)
            nRF52 Central: Lower min connection interval from 20->7.5ms, max 200->1000ms (allows some extra devices to be connected to)
            Bangle.js2: Add optional long press button actions to `showPrompt` (#2656) 
            nRF52: Fix gatt.setRSSIHandler on the first active connection
            Added i2cRead/WriteReg for simplified internal I2C code
            Bangle.js2: Support for new Bangles with MMC36X0 magnetometer (Bangle.dbg() now shows info)