@@ -49,6 +49,7 @@
             JIT: Add peephole optimisations for push/pop (#2691)
             JIT: Remove 'jit' object from RAM (store in stack only when needed) - fix #2664
             Bangle.js2: Ensure Factory Reset deletes stored pairing data
+            nRF52: when initialising DCDC converter, use 0xDC stored in GPREGRET to check for failure, not LOCKUP in RESETREAS
 
      2v28 : Add `E.internal` as a way to access the 'hidden root' containing Espruino internal variables that previously needed `global["\xff"]`
             Bangle.js: Fix back handler not removed when using E.setUI with a back button but without widgets (#2636)
